--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,20 @@
-spring.application.name=demo
+server:
+  port: 6363
+  servlet:
+    context-path: /database
+spring:
+  sql:
+    init:
+      mode: always
+  flyway:
+    locations: classpath:data.sql
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    defer-datasource-initialization: true
+  datasource:
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:academy}?createDatabaseIfNotExist=true
+    username: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD:}
+    driverClassName: com.mysql.cj.jdbc.Driver
